[package]
name = "aes-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.1"
hex = "0.4.3"
openssl = "0.10.42"
aes="0.8.2"
block-modes = "0.9.1"
hex-literal="0.3.3"
cipher = { version = "0.4.3" ,features = ["block-padding","alloc"]}
